tiny tweaks - one more commit before moving whole table

--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,8 @@
 
 .datePicker {
 	text-align: center;
-	/* margin-top: -2px; */
-	padding: 0;
 }
 
 .date-div {
-	padding: 4px;
-	/* margin: 0; */
+	height: 38px;
 }
