--- a/src/App.css
+++ b/src/App.css
@@ -3,33 +3,24 @@
 	width: 80%;
 	margin: auto;
 	max-width: 1000px;
+	background-color: #a7d2cb;
+	border-radius: 30px;
+	padding: 20px;
 }
 
-.col-date {
-	background-color: gray;
-}
-
-.datePicker {
-	text-align: center;
+h1 {
+	margin-bottom: 20px;
 }
 
 .date-div {
 	height: 38px;
 }
 
-.date-group {
-	width: 100%;
-}
-
-.expTable {
+.expense-row {
 	text-align: left;
 }
 
-.delete-button {
-	width: 100%;
-	height: 100%;
-}
-
-.center {
-	justify-content: center;
+.expense-table {
+	margin-top: 10px;
+	background-color: white;
 }
