fix delete button padding, replace screenshot

--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,12 @@ h1 {
 	text-align: left;
 }
 
+.expense-row .delete {
+	text-align: center;
+	padding: 0;
+	padding-top: 1px;
+}
+
 .expense-table {
 	margin-top: 10px;
 	background-color: white;
